plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.8'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    group = 'io.oeid'
    version = '0.0.1-SNAPSHOT'
    java {
        sourceCompatibility = 17
        targetCompatibility = 17
    }
    repositories {
        mavenCentral()
    }
}

dependencies {
    // Spring Boot Web
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.8'
    // Spring Boot Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.8'
    // Spring Boot Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.8'
    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
    // for spatial type in jpa 경도위도 계산
    implementation 'org.hibernate:hibernate-spatial:6.4.1.Final'
    implementation 'org.locationtech.jts:jts-core'
    // Spring Boot Security
    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.8'
    // Spring Boot OAuth2 Client
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.1.8'
    // Feign Client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.6'
    // Firebase Admin
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    // JWT
    implementation 'com.auth0:java-jwt:4.4.0'
    // Spring Boot Data Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.1.8'
    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    // Spring Boot WebFlux
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.8'

    // SpringBoot Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.8'
    // TestContainers
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.1.8'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
    testImplementation 'org.testcontainers:mysql:1.19.3'
    // Spring Security Test
    testImplementation 'org.springframework.security:spring-security-test:6.1.3'
}

    test {
        useJUnitPlatform()
    }

